--- a/psdaq/scripts/part4.cnf
+++ b/psdaq/scripts/part4.cnf
@@ -66,13 +66,13 @@ procmgr_config = [
 #
  { host: daq_tst_dev02,  id:'xLoop-dev02', flags:'s', cmd:'pgp/pgpcardG3/app/xLoopTest -P /dev/pgpcardG3_0_5 -T 0x80 -L 0xf0 -s 10240 -n 16 -F 8 -S' },
  { host: daq_tst_dev03,  id:'xLoop-dev03', flags:'s', cmd:'pgp/pgpcardG3/app/xLoopTest -P /dev/pgpcardG3_0_5 -T 0x80 -L 0xf0 -s 10240 -n 16 -F 8 -S' },
- { host: daq_tst_dev04,  id:'xLoop-dev04', flags:'s', cmd:'pgp/pgpcardG3/app/xLoopTest -P /dev/pgpcardG3_0_5 -T 0x80 -L 0xf0 -s 10240 -n 16 -F 8 -S' },
+ { host: drp_tst_acc03,  id:'xLoop-acc03', flags:'s', cmd:'pgp/pgpcardG3/app/xLoopTest -P /dev/pgpcardG3_0_5 -T 0x80 -L 0xf0 -s 10240 -n 16 -F 8 -S' },
  { host: drp_tst_acc05,  id:'xLoop-acc05', flags:'s', cmd:'pgp/pgpcardG3/app/xLoopTest -P /dev/pgpcardG3_0_1 -T 0x80 -L 0xff -s 10240 -n 16 -F 8 -S' },
 #
 #  DRP receivers
 #
  { host: daq_tst_dev01,  id:'xRead-dev01', flags:'sx', cmd:'pgp/pgpcardG3/app/xRead -P /dev/pgpcardG3_0_1 -L 8 -r'},
- { host: daq_tst_dev04,  id:'xRead-dev04', flags:'sx', cmd:'pgp/pgpcardG3/app/xRead -P /dev/pgpcardG3_0_1 -L 4 -r'},
+ { host: daq_tst_acc03,  id:'xRead-acc03', flags:'sx', cmd:'pgp/pgpcardG3/app/xRead -P /dev/pgpcardG3_0_1 -L 4 -r'},
  { host: drp_tst_acc04,  id:'xRead-acc04', flags:'sx', cmd:'pgp/pgpcardG3/app/xRead -P /dev/pgpcardG3_0_1 -L 8 -r'},
 #
 #  Diagnostics
